--- a/project/liverary/src/liverary/view/loginLayoutFXML.fxml
+++ b/project/liverary/src/liverary/view/loginLayoutFXML.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -11,12 +12,11 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="200.0" prefWidth="450.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="liverary.view.LoginLayout">
    <children>
       <Label alignment="CENTER" prefHeight="0.0" prefWidth="500.0" text="라이브' 러리 로그인" textAlignment="CENTER">
          <font>
-            <Font name="Malgun Gothic" size="27.0" />
+            <Font name="Malgun Gothic Bold" size="27.0" />
          </font>
          <opaqueInsets>
             <Insets />
@@ -48,8 +48,8 @@
                   <Insets top="10.0" />
                </padding>
             </Label>
-            <TextField fx:id="username_textfield" prefHeight="25.0" prefWidth="337.0" GridPane.columnIndex="1" />
-            <TextField fx:id="password_textfield" prefHeight="25.0" prefWidth="319.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <TextField fx:id="usernameTextField" onAction="#usernameTextFieldEntered" prefHeight="25.0" prefWidth="337.0" GridPane.columnIndex="1" />
+            <PasswordField fx:id="passwordTextField" onAction="#passwordTextFieldEntered" GridPane.columnIndex="1" GridPane.rowIndex="1" />
          </children>
          <VBox.margin>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
@@ -57,12 +57,12 @@
       </GridPane>
       <HBox alignment="TOP_RIGHT" prefHeight="0.0" prefWidth="600.0">
          <children>
-            <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="75.0" text="회원가입">
+            <Button fx:id="registerBtn" mnemonicParsing="false" onAction="#handleRegisterBtn" prefHeight="40.0" prefWidth="75.0" text="회원가입">
                <HBox.margin>
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </HBox.margin>
             </Button>
-            <Button fx:id="login_btn" mnemonicParsing="false" onAction="#handleLoginBtn" prefHeight="40.0" prefWidth="75.0" text="로그인">
+            <Button fx:id="loginBtn" mnemonicParsing="false" onAction="#handleLoginBtn" prefHeight="40.0" prefWidth="75.0" text="로그인">
                <HBox.margin>
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </HBox.margin>
