--- a/project/liverary/src/liverary/view/userMainLayoutFXML.fxml
+++ b/project/liverary/src/liverary/view/userMainLayoutFXML.fxml
@@ -57,7 +57,7 @@
                         <Font name="Malgun Gothic" size="16.0" />
                      </font>
                   </Label>
-                  <Hyperlink fx:id="detailLink" text="대출현황 자세히">
+                  <Hyperlink fx:id="detailLink" onAction="#handleDetailLink" text="대출현황 자세히">
                      <font>
                         <Font size="13.0" />
                      </font>
@@ -85,7 +85,7 @@
                         <Font size="13.0" />
                      </font>
                   </Label>
-                  <Hyperlink fx:id="logoutLink" text="로그아웃">
+                  <Hyperlink fx:id="logoutLink" onAction="#handleLogout" text="로그아웃">
                      <font>
                         <Font size="13.0" />
                      </font>
@@ -104,25 +104,36 @@
       </Separator>
       <FlowPane alignment="CENTER" prefHeight="60.0" prefWidth="450.0">
          <children>
-            <ComboBox fx:id="bookSerachByCombobox" prefHeight="22.0" prefWidth="88.0" />
-            <TextField fx:id="bookSearchKeywordTextField" prefHeight="22.0" prefWidth="545.0" />
-            <Button fx:id="bookSearchBtn" mnemonicParsing="false" text="자료검색" />
+            <ComboBox fx:id="bookSerachByCombobox" onAction="#hadleCombobox" prefHeight="22.0" prefWidth="88.0" />
+            <TextField fx:id="bookSearchKeywordTextField" onAction="#handleSearchTextFieldEntered" prefHeight="22.0" prefWidth="545.0" />
+            <Button fx:id="bookSearchBtn" mnemonicParsing="false" onAction="#handleSearchBtn" text="자료검색" />
          </children>
          <padding>
             <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
          </padding>
       </FlowPane>
-      <TableView fx:id="bookSearchTableView" prefHeight="384.0" prefWidth="900.0">
+      <TableView fx:id="bookSearchTableView" prefHeight="384.0" prefWidth="900.0" VBox.vgrow="ALWAYS">
          <VBox.margin>
             <Insets top="7.0" />
          </VBox.margin></TableView>
-      <HBox alignment="CENTER_RIGHT" prefHeight="36.0" prefWidth="885.0">
+      <HBox alignment="CENTER_RIGHT" prefHeight="0.0" prefWidth="900.0">
          <padding>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
          </padding>
          <VBox.margin>
             <Insets />
          </VBox.margin>
+      </HBox>
+      <HBox alignment="CENTER" prefHeight="45.0" prefWidth="900.0">
+         <children>
+            <Button fx:id="detailInfoBtn" mnemonicParsing="false" onAction="#handleDetailInfoBtn" text="세부 정보 조회" />
+         </children>
+         <VBox.margin>
+            <Insets />
+         </VBox.margin>
+         <padding>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+         </padding>
       </HBox>
    </children>
 </VBox>
