패키지 구조 수정 및 데이터베이스 일부 수정 1. 컨트롤러를 FXML 컨트롤러로 일원화 2. DAO 내에서 조인하던 SQL을 없애고, 같은 기능의 뷰를 만들어 대체

--- a/project/liverary/src/liverary/view/getDetailBookInfoLayoutFXML.fxml
+++ b/project/liverary/src/liverary/view/getDetailBookInfoLayoutFXML.fxml
@@ -46,7 +46,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox fx:id="rootVBox" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="liverary.view.GetDetailBookInfoLayout">
+<VBox fx:id="rootVBox" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="liverary.controller.GetDetailBookInfoLayoutController">
    <children>
       <HBox nodeOrientation="LEFT_TO_RIGHT" prefHeight="100.0" prefWidth="1200.0">
          <children>
