--- a/project/liverary/src/liverary/view/loginLayoutFXML.fxml
+++ b/project/liverary/src/liverary/view/loginLayoutFXML.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="200.0" prefWidth="450.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="liverary.view.LoginLayout">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="200.0" prefWidth="450.0" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="liverary.controller.LoginLayoutController">
    <children>
       <Label alignment="CENTER" prefHeight="0.0" prefWidth="500.0" text="LIVE'rary 로그인" textAlignment="CENTER">
          <font>
