--- a/project/liverary/src/liverary/view/menuComponentFXML.fxml
+++ b/project/liverary/src/liverary/view/menuComponentFXML.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 
-<MenuBar xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="liverary.view.MenuComponent">
+<MenuBar xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="liverary.controller.MenuComponentController">
    <menus>
       <Menu mnemonicParsing="false" text="열람업무">
          <items>
